fix icon and implement new control size

--- a/vignettes/usage-leaflet.Rmd
+++ b/vignettes/usage-leaflet.Rmd
@@ -39,7 +39,7 @@ leaflet() %>%
 
 Note that each function call has its own layerId. If you don't provide a layerId for your layers, the opacity controls will still work, but will use the internal `_leaflet_id` as a label for each control.
 
-You can also customize some interface aspects such as box title, position and whether opacity controls will remain collapsed.
+You can also customize some interface aspects such as box title, position, size and whether opacity controls will remain collapsed.
 
 ```{r, warning=FALSE}
 leaflet() %>%
@@ -47,7 +47,7 @@ leaflet() %>%
   addRasterImage(r, layerId = "rast") %>%
   addAwesomeMarkers(lng = -2.79545, lat = 54.04321,
                     label = "Hospital", layerId = "hospital") %>%
-  addOpacityControls(collapsed = TRUE, position = "topleft")
+  addOpacityControls(collapsed = TRUE, position = "topleft", size = "s")
 ```
 
 You can also define the subset of layers you want to show opacity controls to. You can provide the layerId of the layers to be shown.
